# library-management-system

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  app.json  build.sh  docker-compose.yml  heroku-postbuild.sh  heroku.yml  package.json  refactoring-analysis.md  setup_heroku.sh
.github/workflows/: ci.yml  heroku-deploy.yml
backend/: CLAUDE.md  Dockerfile  add_test_books.py  pyproject.toml  requirements.txt
backend/app/: auth.py  auth_dependencies.py  config.py  dependencies.py  main.py
backend/app/application/: feedback_services.py  github_service.py  services.py  user_services.py
backend/app/domain/: __init__.py  feedback_models.py  feedback_repositories.py  models.py  repositories.py  user_models.py  user_repositories.py
backend/app/infrastructure/: __init__.py  database.py  feedback_repositories.py  init_data.py  postgres_repository.py  repositories.py  user_repositories.py
backend/app/models/: book.py
backend/app/routers/: auth.py  books.py  feedback.py  recommendations.py
backend/static/: index.html
backend/static/assets/: index-Cuy1VOry.js  index-DQt-yzEO.css
backend/tests/: conftest.py  sqlite_repository.py  test_auth.py  test_books.py
frontend/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: .env  App.tsx  index.css
frontend/src/components/: AddBookForm.tsx  AuthPage.tsx  BookList.tsx  BookRecommendations.tsx  BorrowBookForm.tsx  FeedbackForm.tsx  FeedbackList.tsx  LoginForm.tsx  RegisterForm.tsx  UserHeader.tsx
frontend/src/lib/: api.ts  (+1 more)
(+6 files in other folders)
