[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}
psycopg = {extras = ["binary"], version = "^3.2.6"}
pydantic-settings = "^2.2.1"
aiofiles = "^24.1.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pygithub = "^2.1.1"
anthropic = "^0.40.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
